--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fullhuman/postcss-purgecss": "^4.0.2",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.167.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
@@ -46,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^2.2.7",
+    "three": "^0.167.1",
     "ts-loader": "^8.0.17"
   }
 }
