--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "cssnano": "^4.1.10",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss-safe-parser": "^5.0.2",
@@ -43,9 +44,13 @@
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/leaflet": "^1.9.12",
+    "leaflet": "^1.9.4",
     "postcss-loader": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "sass": "^1.77.8",
     "tailwindcss": "^2.2.7",
     "three": "^0.167.1",
     "ts-loader": "^8.0.17"
