--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react_boilerplate",
+  "name": "portfolio_website",
   "version": "1.1.0",
-  "description": "React boilerplate template",
+  "description": "Portfolio site",
   "main": "src/index.ts",
   "scripts": {
     "postinstall": "npm run css",
@@ -11,7 +11,7 @@
     "analyze": "env NODE_ENV=analyze webpack --mode development --config webpack.dev.js",
     "css": "npx tailwindcss build -i tailwind/tailwind.css -o src/style.css"
   },
-  "author": "Jareth Rader <jarethrdev@gmail.com>",
+  "author": "Jet Alcid <jetharyalcid@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.13.0",
@@ -22,12 +22,10 @@
     "@fullhuman/postcss-purgecss": "^4.0.2",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "@types/three": "^0.167.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "cssnano": "^4.1.10",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss-safe-parser": "^5.0.2",
@@ -44,15 +42,11 @@
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@types/leaflet": "^1.9.12",
-    "leaflet": "^1.9.4",
+    "file-loader": "^6.2.0",
     "postcss-loader": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "sass": "^1.77.8",
     "tailwindcss": "^2.2.7",
-    "three": "^0.167.1",
     "ts-loader": "^8.0.17"
   }
 }
